# s2s-ai

./: .gitignore  README.md  cli.py  contacts.csv  contacts.json  env.example  filestructure.txt  gradio_demo.py  pyproject.toml  requirements.txt  setup.py
.gradio/flagged/: dataset1.csv
api/: pipeline_core.py
gui/: audio_level_bar.py  s2s_gui_full.py  waveform_display.py
s2s_pipeline/actions/: action_router.py
s2s_pipeline/asr/: asr2llm_adapter.py  deepgram_asr.py  whisper_asr.py
s2s_pipeline/audio/: audio_input.py  fallback_audio_io.py  mic_config.json  microphone_finder.py  output_audio.py  vad_speaker_id.py
s2s_pipeline/dialogue/: conversation_classifier.py  dialogue_manager.py  prompt_engineer.py
s2s_pipeline/llm/: llama_llm.py  llm2t2c_adapter.py  mistral_llm.py  openai_llm.py
s2s_pipeline/tts/: deepgram_tts.py
s2s_pipeline/utils/: confirm_matcher.py  contact_to_json.py
scripts/: run_pipeline.py
tests/: test_pipeline.py
transcripts/: log_20250517_005927.txt  log_20250517_010259.txt  log_20250517_011726.txt  log_20250517_012120.txt  log_20250517_012435.txt  log_20250517_012522.txt  log_20250517_012709.txt  log_20250517_013038.txt  log_20250517_013144.txt  log_20250517_013231.txt  log_20250517_013729.txt  log_20250517_014244.txt  log_20250517_021223.txt  log_20250517_021732.txt  log_20250517_021913.txt  log_20250517_023015.txt  log_20250517_023639.txt  log_20250517_023909.txt  log_20250517_024309.txt  log_20250517_024441.txt  log_20250517_025943.txt  log_20250517_030028.txt  log_20250517_030150.txt  log_20250517_141417.txt
utils/: env_check.py
