[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s2s_ai_pipeline"
version = "0.1.0"
authors = [{name="Your Name", email="your.email@example.com"}]
description = "Multi-turn Speech-to-Speech AI Pipeline"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "pyaudio",
    "whisper-openai",
    "openai",
    "deepgram-sdk",
    "simpleaudio",
]

[project.scripts]
s2s-run = "scripts.run_pipeline:main"
